# rutty

./: Cargo.toml  LICENSE  Makefile  Procfile  README.md  build.rs  index.dc5b4dbf.css  index.dc5b4dbf.css.map  index.html  rustfmt.toml
.github/workflows/: gh-pages.yml  release.yml
assets/favicon/: site.webmanifest
backend/: .gitignore  Cargo.toml  build.rs
backend/src/: cli.rs  command.rs  main.rs  server.rs  websocket.rs
demo/: index.html  package.json  styles.css  tsconfig.json
web/: .proxyrc  index.html  package.json
web/css/: styles.css
web/js/: app.ts  status.ts  websocket-addon.ts
