[package]
name = "rutty"
version = "0.1.0"
edition = "2021"
authors = ["Gershon Papiashvili"]
description = "RuTTY - Rust TTY Server"
documentation = "https://github.com/papigers/rutty/blob/master/README.md"
license-file = "LICENSE"
readme = "README.md"
keywords = ["tty", "terminal"]
repository = "https://github.com/papigers/rutty"
exclude = ["web"]
# to not ignore backend/static
include = ["backend/**/*"]

[dependencies]
async-stream = "0.3.5"
axum = { version = "0.6.18", features = ["ws", "headers"] }
bytes = "1.4.0"
clap = { version = "4.3.0", features = ["derive"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }
headers = "0.3"
mime_guess = "2.0.4"
process-stream = "0.4.1"
pty-process = { version = "0.3.0", features = ["async"] }
rust-embed = { version = "6.6.1", features = ["debug-embed"] }
serde = { version = "1.0.163", features = ["derive"] }
tap = "1.0.1"
thiserror = "1.0.40"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-tungstenite = "0.18.0"
tokio-util = "0.7.8"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "rutty"
path = "backend/src/main.rs"
